--- a/css/styles.css
+++ b/css/styles.css
@@ -120,3 +120,29 @@ margin-right: 50px;
         font-size: 3.000em;
     }
 }
+.media-c{
+
+
+@media (min-width: 1024px) and (max-width: 1600px) {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: auto auto;
+    grid-template-areas: 
+    "form-c imgcop";
+    
+#form-c{
+        grid-area: form-c;
+    }
+#Imgcop{
+        grid-area: imgcop;
+    }
+}
+}
+.imgcopw{
+    width: 90%;
+    margin: 1.750em;
+}
+.btn{
+    background-color: orangered;
+}
